Release REST API v0.4.0
