# models/coupon_response.go
@@ -1,0 +1,67 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// CouponResponse coupon response
+// swagger:model CouponResponse
+type CouponResponse struct {
+
+	// discount
+	Discount float32 `json:"discount,omitempty"`
+
+	// valid
+	// Required: true
+	Valid *bool `json:"valid"`
+}
+
+// Validate validates this coupon response
+func (m *CouponResponse) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateValid(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *CouponResponse) validateValid(formats strfmt.Registry) error {
+
+	if err := validate.Required("valid", "body", m.Valid); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *CouponResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *CouponResponse) UnmarshalBinary(b []byte) error {
+	var res CouponResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
