# persistence/entity/order.go
@@ -7,11 +7,13 @@ type Order struct {
 	UserID string        `bson:"user_id"`
 	CafeID bson.ObjectId `bson:"cafe_id"`
 	Status string        `bson:"status"`
+	Coupon string        `bson:"coupon,omitempty"`
 	Items  []OrderItem   `bson:"items"`
 }
 type OrderItem struct {
 	PositionID string `bson:"position_id"`
 	Amount     int64  `bson:"amount"`
+	Total      int64  `bson:"total_price"`
 }
 
 const (
