# restapi/operations/coupon/get_coupon_id_responses.go
@@ -1,0 +1,146 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package coupon
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/spplatform/kazan-backend/models"
+)
+
+// GetCouponIDOKCode is the HTTP code returned for type GetCouponIDOK
+const GetCouponIDOKCode int = 200
+
+/*GetCouponIDOK OK
+
+swagger:response getCouponIdOK
+*/
+type GetCouponIDOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.CouponResponse `json:"body,omitempty"`
+}
+
+// NewGetCouponIDOK creates GetCouponIDOK with default headers values
+func NewGetCouponIDOK() *GetCouponIDOK {
+
+	return &GetCouponIDOK{}
+}
+
+// WithPayload adds the payload to the get coupon Id o k response
+func (o *GetCouponIDOK) WithPayload(payload *models.CouponResponse) *GetCouponIDOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get coupon Id o k response
+func (o *GetCouponIDOK) SetPayload(payload *models.CouponResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetCouponIDOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetCouponIDNotFoundCode is the HTTP code returned for type GetCouponIDNotFound
+const GetCouponIDNotFoundCode int = 404
+
+/*GetCouponIDNotFound Not found
+
+swagger:response getCouponIdNotFound
+*/
+type GetCouponIDNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.StatusResponse `json:"body,omitempty"`
+}
+
+// NewGetCouponIDNotFound creates GetCouponIDNotFound with default headers values
+func NewGetCouponIDNotFound() *GetCouponIDNotFound {
+
+	return &GetCouponIDNotFound{}
+}
+
+// WithPayload adds the payload to the get coupon Id not found response
+func (o *GetCouponIDNotFound) WithPayload(payload *models.StatusResponse) *GetCouponIDNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get coupon Id not found response
+func (o *GetCouponIDNotFound) SetPayload(payload *models.StatusResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetCouponIDNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetCouponIDInternalServerErrorCode is the HTTP code returned for type GetCouponIDInternalServerError
+const GetCouponIDInternalServerErrorCode int = 500
+
+/*GetCouponIDInternalServerError Internal server error
+
+swagger:response getCouponIdInternalServerError
+*/
+type GetCouponIDInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.StatusResponse `json:"body,omitempty"`
+}
+
+// NewGetCouponIDInternalServerError creates GetCouponIDInternalServerError with default headers values
+func NewGetCouponIDInternalServerError() *GetCouponIDInternalServerError {
+
+	return &GetCouponIDInternalServerError{}
+}
+
+// WithPayload adds the payload to the get coupon Id internal server error response
+func (o *GetCouponIDInternalServerError) WithPayload(payload *models.StatusResponse) *GetCouponIDInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get coupon Id internal server error response
+func (o *GetCouponIDInternalServerError) SetPayload(payload *models.StatusResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetCouponIDInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
